# nsg

./: CMakeLists.txt
include/efanna2e/: index_nsg.h
include/faiss/: AutoTune.h  Clustering.h  DirectMap.h  IVFlib.h  Index.h  Index2Layer.h  IndexBinary.h  IndexBinaryFlat.h  IndexBinaryFromFloat.h  IndexBinaryHNSW.h  IndexBinaryHash.h  IndexBinaryIVF.h  IndexFlat.h  IndexHNSW.h  IndexIVF.h  IndexIVFFlat.h  IndexIVFPQ.h  IndexIVFPQR.h  IndexIVFSpectralHash.h  IndexLSH.h  IndexLattice.h  IndexPQ.h  IndexPreTransform.h  IndexReplicas.h  IndexScalarQuantizer.h  IndexShards.h  InvertedLists.h  MatrixStats.h  MetaIndexes.h  MetricType.h  OnDiskInvertedLists.h  VectorTransform.h  clone_index.h  index_factory.h  index_io.h
include/faiss/impl/: AuxIndexStructures.h  FaissAssert.h  FaissException.h  HNSW.h  PolysemousTraining.h  ProductQuantizer-inl.h  ProductQuantizer.h  ScalarQuantizer.h  ThreadedIndex-inl.h  ThreadedIndex.h  io.h  lattice_Zn.h
include/faiss/utils/: Heap.h  WorkerThread.h  distances.h  extra_distances.h  hamming-inl.h  hamming.h  random.h  utils.h
own/: CMakeLists.txt  run.cpp  run.h  run_pca.cpp  utils.cpp  utils.h
own/Inc/: aux.h  run_pca.h
own/Include/: run_build.h  utils.h
own/Src/: run.cpp  run_build.cpp  run_pca.cpp  utils.cpp
src/: index_nsg.cpp
tests/: CMakeLists.txt  own.cpp  own.h  run.cpp  run.h  run2.cpp  run2.h  test_nsg_index.cpp  test_nsg_optimized_search.cpp  test_nsg_search.cpp
